# devops-nm

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  basic.yml
app/: main.py  test_main.py
